# invoice_rag_reader

./: .dockerignore  .gitignore  Dockerfile  README.md  device.py  env.example  health.py  postman_collection.json  pyproject.toml
.claude/: settings.local.json
app/: config.py  main.py
app/db/: database.py  vector_store.py
app/models/: document.py
app/routers/: documents.py  health.py  rag.py
app/schemas/: document.py  health.py  rag.py
app/services/: answer.py  device.py  donut.py  indexing.py  ocr.py  search.py  storage.py
setup/: download_sample.py
tests/: conftest.py  test_answer.py  test_health.py  test_indexing.py  test_ocr.py  test_search.py  test_status.py  test_upload.py
